--- a/index.html
+++ b/index.html
@@ -103,8 +103,18 @@
             </div>
           </div>
         </div>
+         <br />
+        <small
+          ><a
+            href="https://github.com/Burgundypanda/Weather-project"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Jakiya Rahman</small
+        >
       </div>
     </div>
+  </div>
     <script src="src/index.js"></script>
   </body>
 </html>
